<resources>
    <string name="app_name">Sign Up Example</string>
    <string name="title_activity_pay_forward"><u><i><b>PayForward</b></i></u></string>

    <!-- Strings related to phone number -->
    <string name="welcome">Please answer the following</string>
    <string name="phone_number">What\'s your phone number?</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="no_share">We will never publicly share your phone number. This is for
        verification purposes only.</string>
    <string name="disclaimer">By signing up, you agree to the <u>PayForward Terms of Service and
        Privacy Policy</u>, as well as those of each community you join.</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="pick_birthday">Pick Date</string>
    <string name="prompt_zipcode">Zip Code</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Strings for onSubmit -->
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_phone">Must be at least 10 numbers</string>
    <string name="error_invalid_email">Must be a valid email</string>
    <string name="error_invalid_zipCode">Must be 5 numbers</string>
    <string name="error_invalid_password">Must be at least 6 characters</string>

    <!-- Strings for PayForward page -->
    <string name="feedback">How did I do?</string>
    <string name="basic_site_description">In this view you would see some profiles and the ability to start and respond to different requests and offers.</string>

</resources>
