<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simlerentertainment.loginexample.PhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/no_share"
            android:textColor="#606060"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_number"
                android:inputType="phone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/disclaimer"
            android:textColor="#606060"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/phone_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
